fixed bug with checking jumps when 7 played

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,7 +66,9 @@ body {
 .board_screenshot {
 	width: 400px;
 	height: 400px;
-	border: 4px solid black
+	border: 4px solid black;
+	float: left;
+	margin: 10px;
 }
 
 #discardpile {
@@ -155,16 +157,4 @@ body {
 	position: absolute;
 	top: 720px;
 	left: 160px;
-}
-
-@keyframes blink {
-    0% {
-        opacity: 1;
-    }
-    50% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
 }
